FLUID-2380: tweaked high contrast themes to work with themeroller downloads, fixed themeroller image manually
svn path=/fluid/infusion/trunk/; revision=7238

--- a/src/webapp/framework/fss/css/fss-theme-hc.css
+++ b/src/webapp/framework/fss/css/fss-theme-hc.css
@@ -14,7 +14,7 @@
 }
 
 .fl-theme-hc {color:#000000 !important; background-color:#ffffff !important;}
-.fl-theme-hc * {color:#000000 !important; background-color:#ffffff; border-color:#000;}
+.fl-theme-hc div, .fl-theme-hc input {color:#000000; background-color:#ffffff; border-color:#000;}
 .fl-theme-hc .fl-knockout {background:transparent !important; color:#000;} /* a granular method for basic reset of appearance */
 
 /* Links */
