--- a/src/webapp/framework/fss/css/fss-theme-hci.css
+++ b/src/webapp/framework/fss/css/fss-theme-hci.css
@@ -14,7 +14,7 @@
 }
 
 .fl-theme-hci {color:#fff !important; background-color:#000 !important;}
-.fl-theme-hci * {color:#fff !important; background-color:#000; border-color:#ffffff;}
+.fl-theme-hci div, .fl-theme-hci input {color:#fff !important; background-color:#000 !important;}
 .fl-theme-hci .fl-knockout {background:transparent !important; color:#ffffff;} /* a granular method for basic reset of appearance */
 
 /* Links */
@@ -28,7 +28,7 @@
 .fl-theme-hci h3,
 .fl-theme-hci h4,
 .fl-theme-hci h5,
-.fl-theme-hci h6 {color:#ffffff !important; background-color:#000000 !important; border-color:#ffffff !important; border-bottom:0.1em dashed #ffffff !important;}
+.fl-theme-hci h6 {color:#ffffff; background-color:#000000; border-color:#ffffff; border-bottom:0.1em dashed #ffffff;}
 
 /* Tables */
 .fl-theme-hci th {border:0.1em solid #ffffff; background-color:#ffffff !important; color:#000000 !important;}
@@ -79,9 +79,9 @@
 .fl-theme-hci .fl-button-inner {padding:0;}
 
 /* Widget core */
-.fl-theme-hci .fl-widget {background-color:#ffffff; border:1px solid #000000;}
+.fl-theme-hci .fl-widget {background-color:#ffffff !important; border:1px solid #000000;}
 .fl-theme-hci .fl-widget ul {}
-.fl-theme-hci .fl-widget h2 {color:#000000;}
+.fl-theme-hci .fl-widget h2 {color:#000000; background-color:#ffffff;}
 .fl-theme-hci .fl-widget a {color:#ffffff;}
 .fl-theme-hci .fl-widget .fl-icon {color:#ffffff; background-image:none; background-color:#000000; text-indent:0; width:auto; height:auto; margin-left:0px; padding:0 2px; display:inline; font-weight:bold;}
         
